--- a/treewidth-memoization.vcxproj.filters
+++ b/treewidth-memoization.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="UpperBound.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TopDownTW.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractMemo.hh">
