Abstract version of bottom up

--- a/treewidth-memoization.vcxproj
+++ b/treewidth-memoization.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AbstractBottomUp.cc" />
     <ClCompile Include="AbstractMemo.cc" />
     <ClCompile Include="BasicMemo.cc" />
     <ClCompile Include="BottomUpTW.cc" />
@@ -152,6 +153,7 @@
     <ClCompile Include="VSet.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractBottomUp.hh" />
     <ClInclude Include="AbstractMemo.hh" />
     <ClInclude Include="BasicMemo.hh" />
     <ClInclude Include="BottomUpTW.hh" />
