--- a/treewidth-memoization.vcxproj.filters
+++ b/treewidth-memoization.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClCompile Include="AbstractBottomUp.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TreeBottomUp.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ArrayOfSetBottomUp.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractMemo.hh">
@@ -111,6 +117,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AbstractBottomUp.hh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeBottomUp.hh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayOfSetBottomUp.hh">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
