Commit before rollback bug hunting

--- a/treewidth-memoization.vcxproj
+++ b/treewidth-memoization.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="DepthBoundedMemo.hh" />
     <ClInclude Include="DIMACS.hh" />
     <ClInclude Include="graphTypes.hh" />
+    <ClInclude Include="bloom_filter.hpp" />
     <ClInclude Include="OppBloom.hh" />
     <ClInclude Include="TreeBottomUp.hh" />
     <ClInclude Include="UpperBound.hh" />
