--- a/treewidth-memoization.vcxproj.filters
+++ b/treewidth-memoization.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="Simplicial.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LastInsertedTopDown.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractMemo.hh">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Simplicial.hh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LastInsertedTopDown.hh">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
